Initial Rossler translation

--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -1,6 +1,6 @@
 
 \FloatBarrier
-\section{Система Рёсслера} %  % {{{1 _ROSS_
+\section{Система Ресслера} % {{{1 _ROSS_
 \label{atu:sect:ross}
 
 \LinkRef{
@@ -8,15 +8,13 @@
   % ~/doc/tex/asau/asau14/atu/atu.tex
 }
 
-\subsection{Определение системы и анализ её динамики} %  % {{{2 _ross_task
+\subsection{Визначення системи та аналіз її динаміки} % {{{2 _ross_task
 
-% TODO original Rossler
-Динамическая система Рёсслера~(\ref{atu:eq:rossler})
-является в кокой-то мере абстрактной моделью,
-описывающей кинетику колебательных и хаотических химических процессов
-~\cite{ROSSLER1976397,neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn,puhov_ur_reaction_diffusion},
-таких как реакция Белоусова-Жаботинского, кристаллизации фосфита свинца и других реакций.
-
+Динамічна система Ресслера~(\ref{atu:eq:rossler}) є в певній мірі
+абстрактною моделлю, яка описує кінетику коливальних і
+хаотичних хімічних процесів~\cite{ROSSLER1976397, neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn, puhov_ur_reaction_diffusion},
+таких як реакція Білоусова-Жаботінського, кристалізація фосфіту свинцю
+та інших реакцій.
 
 \begin{equation}
 \begin{cases}
@@ -27,43 +25,35 @@
 \label{atu:eq:rossler}
 \end{equation}
 
-Здесь \(x\), \(y\), \(z\) -- переменные состояния системы,
-которые соответствуют концентрациям основных реагентов
-в моделируемой химической системе.
-Соответственно \(a\), \(b\), \(c\) --
-параметры, определяющие динамику системы
-(в моделируемой системе определяются константами химического равновесия
-и концентрациями вспомогательных реагентов).
+Тут \(x\), \(y\), \(z\) --- змінні стану системи, які відповідають
+концентраціям основних реагентів в хімічної
+системі, що моделюється.
+Відповідно \(a\), \(b\), \(c\) --- параметри, що визначають
+динаміку системи, які в хімічної системі визначаються
+константами хімічної рівноваги і концентраціями допоміжних реагентів.
 
-При моделировании данной системы положим
-\(a=0.25\), \(b=1\).
-В этом случае параметр \(c\) определяет
-тип динамики системы.
-Определение значения данного параметра и будет
-целью задачи идентификации.
+При моделюванні даної системи покладемо \(a = 0.25 \), \(b = 1 \). У цьому
+випадку параметр \(c \) визначає тип динаміки системи. Визначення
+значення даного параметра і буде метою задачі ідентифікації.
 
-В данной системе нет внешнего входного сигнала \( u(t) \).
-Это объясняется тем, что за счет
-поддержания постоянных концентраций вспомогательных
-компонент, постоянного пополнения исходных веществ
-и удаления продуктов реакции система обладает
-собственным источником энергии, который обеспечивает
-динамику системы и при отсутствии
-внешнего воздействия.
+У даній системі немає зовнішнього вхідного сигналу \(u (t) \). Це
+пояснюється тим, що за рахунок підтримки постійних концентрацій
+допоміжних компонент, постійного поповнення початкових речовин і
+видалення продуктів реакції система володіє власним джерелом
+енергії, який забезпечує динаміку системи і при відсутності
+зовнішнього впливу.
 
-Как и другие системы хаотической динамики, система Ресслера
-не позволяет построить систему идентификации, основанную
-на формировании критерия качества идентификации
-как меры близости непосредственных значений выходных сигналов
-объекта \( x_0(t) \) и модели \( x_m(t) \).
-Более того, сам вид поведения данной системы может значительно изменяться
-при малых изменениях параметров, совершая переход от
-хаотического к сложно-периодическому и обратно.
+Як і інші системи хаотичної динаміки, система Ресслера не
+дозволяє побудувати систему ідентифікації, засновану на
+формуванні критерію якості ідентифікації як міри близькості
+безпосередніх значень вихідних сигналів об'єкта \(x_o (t) \) і моделі
+\(x_m (t) \). Більш того, сам вид поведінки даної системи може значно
+змінюватися при малих змінах параметрів, здійснюючи перехід
+від хаотичного до складно-періодичного і назад.
 
-При малых значениях параметра (\(c \approx 3 \))
-система проявляет регулярную динамику,
-совершая колебательное движение вокруг точки
-неустойчивого равновесия~(рис.~\ref{atu:f:ross_attractor_0300}).
+При малих значеннях параметра (\(c \approx 3 \)) система проявляє
+регулярну динаміку, здійснюючи коливальний рух навколо точки
+нестійкої рівноваги~(рис.~\ref{atu:f:ross_attractor_0300}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -71,14 +61,14 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_f-p_f_c=03x50.png}
 \end{center}
-  \caption{Аттрактор и спектр системы Рёсслера (\ref{atu:eq:rossler}) в режиме регулярных колебаний ($c=3.5$)}
+\caption{Аттрактор і спектр системи Ресслера (\ref{atu:eq:rossler}) в режимі регулярних коливань ($c = 3.5$)}
 \label{atu:f:ross_attractor_0300}
 \end{figure}
 
-При увеличении значения параметра \(c\) происходит удвоение периода,
-поведение системы становится все более сложным, и в определенном
-диапазоне значений параметра система демонстрирует
-хаотическую динамику~\cite{atu_st67} (рис.~\ref{atu:f:ross_attractor_0588}).
+При збільшенні значення параметра \(c\) відбувається подвоєння
+періоду, поведінка системи стає все більш складною, і в певному
+діапазоні значень параметра система демонструє хаотичну
+динаміку~\cite{atu_st67} (рис.~\ref{atu:f:ross_attractor_0588}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -86,24 +76,22 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_f-p_f_c=05x88.png}
 \end{center}
-  \caption{Аттрактор и спектр системы Рёсслера (\ref{atu:eq:rossler}) в режиме хаотических колебаний ($c=5.88$)}
+\caption{Аттрактор і спектр системи Ресслера (\ref{atu:eq:rossler}) в режимі хаотичних коливань ($ c = 5.88 $)}
 \label{atu:f:ross_attractor_0588}
 \end{figure}
 
 
-Прослеживается отличие спектра системы Рёсслера в хаотическом режиме
-от аналогичных условий для систем Лоренца. Отличие заключается в том, что
-существует ярко выраженный пик, соответствующий базовой частоте,
-а области сплошного спектра характеризуются небольшой амплитудой.
-При некоторых больших значениях параметра $c$
-область сплошного спектра становится более заметной,
-однако общая структура спектра остаётся такой же.
+Простежується відміна спектра системи Ресслера в хаотичному
+режимі від спектру за аналогічних умов для систем Лоренца. Відмінність
+полягає в тому, що існує яскраво виражений пік, відповідний
+базовій частоті, а області суцільного спектра характеризуються
+невеликою амплітудою. При деяких великих значеннях параметра
+$ c $ область суцільного спектра стає більш помітною, проте
+загальна структура спектра залишається такою~ж.
 
-
-При дальнейшем увеличении значения параметра \(c\)
-наблюдаются переходы от хаотического к сложно-периодическому
-(рис.~\ref{atu:f:ross_attractor_2500})
-и  обратно.
+При подальшому збільшенні значення параметра
+\(c\) спостерігаються переходи від хаотичного до
+складно-періодичному (рис.~\ref{atu:f:ross_attractor_2500}) і назад.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -111,53 +99,45 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_f-p_f_c=25x00.png}
 \end{center}
-  \caption{Аттрактор и спектр системы Рёсслера (\ref{atu:eq:rossler}) в режиме сложно-периодических колебаний ($c=25.0$)}
+\caption{Аттрактор і спектр системи Ресслера (\ref{atu:eq:rossler}) в режимі складно-періодичних коливань ($ c = 25.0 $)}
 \label{atu:f:ross_attractor_2500}
 \end{figure}
 
-При этом наблюдается линейчатый спектр. Также при
-таких периодах может скачкообразно изменятся
-размер области, в которую вписан аттрактор.
-В этом смысле система Рёсслера потенциально является более сложной
-для идентификации, чем системы Лоренца и ``Sprott A''.
+При цьому спостерігається лінійчатий спектр. Також, при таких
+значеннях параметра може стрибкоподібно зміняться розмір області, в яку
+вписаний аттрактор. У цьому сенсі система Ресслера потенційно є
+більш складною для ідентифікації, ніж системи Лоренца і ``Sprott~A''.
 
-Участки хаотической динамики перемежаются с участками сложно-периодических
-колебаний. При этом происходит изменение структуры аттрактора~\cite{buscarino_sync_rossler,rosalie_rossler_template}.
-Более того, при одном и том же типе динамики может изменяться как структура аттрактора,
-так и размер области, в которую он может быть вписан.
-
-% Идентифицируемый параметр:
-% $ c \in [2; 50] $, $c_0=5.88$.
-%
-% Остальные параметры:
-% \( a \in (0, 0.35 ) \), $a_0=0.25$,
-% \(b \in[0;4] \), $b_0=1$.
-
+Ділянки хаотичної динаміки перемежовуються з ділянками
+складно-періодичних коливань. При цьому відбувається зміна
+структури атрактору~\cite{buscarino_sync_rossler, rosalie_rossler_template}. Більш того,
+при одному і тому ж типі динаміки може змінюватися як структура
+аттрактора, так і розмір області, в яку він може бути вписаний.
 
 % }}}2
 
-\subsection{Анализ и выбор критериев}  % {{{2
+\subsection{Аналіз і вибір критеріїв} % {{{2
 
-Система Рёсслера отличается от уже рассмотренных систем тем,
-что соответствующая физическая (или химическая) система
-находится в условиях, в которых нет смысла использовать
-закон сохранения энергии. Концентрации реагентов,
-которые расходуются в реакции, поддерживаются на постоянном уровне
-за счёт внешних воздействий. Также считается,
-что неиспользуемые продукты реакций удаляются.
-Такие свойства дают основания предполагать,
-что стандартный набор критериев, который был применён для
-систем Лоренца и системы ``Sprott A'', не будет
-содержать подходящего критерия. Исходя из формы аттрактора,
-содержащего близкие к круговым траектории вблизи плоскости $XY$,
-добавим критерий $q_{x^2+y^2}$ к списку рассматриваемых.
-Наблюдения за изменением формы аттрактора при увеличении параметра $c$
-позволяют заметить, что, в целом, максимальная аппликата также
-растёт. Это наблюдение позволяет добавить критерий $q_{z \max{}}$
-в число рассматриваемых~\cite{atu_ISDMCI2012,atu_asau14}.
-Зависимости рассматриваемых критериев от $c$
-приведены на рис.~\ref{atu:f:ross_q}.
-
+Система Ресслера відрізняється від уже розглянутих систем
+тим, що відповідна фізична (або хімічна) система знаходиться в
+умовах, в яких немає сенсу використовувати закон збереження
+енергії. Концентрації реагентів, які витрачаються в реакції,
+підтримуються на постійному рівні за рахунок зовнішніх
+впливів. Також вважається,  що продукти
+реакцій, які не використовуються, видаляються.
+Такі властивості дають підстави
+припускати, що стандартний набір критеріїв, який був
+застосований для систем Лоренца і системи ``Sprott~A'', не буде
+містити відповідного критерію. Виходячи з форми аттрактора,
+що містить близькі до кругових траєкторії поблизу площини
+$XY$, додамо критерій
+$q_{x^2 + y^2} $ до списку розглянутих. Спостереження за зміною
+форми аттрактора при збільшенні параметра
+$c$ дозволяють помітити, що, в цілому, максимальна апліката
+також зростає. Це спостереження дозволяє додати критерій
+$ q_{z \max{}} $ в число розглянутих~\cite{atu_ISDMCI2012, atu_asau14}. Залежності
+розглянутих критеріїв від параметра
+$ c $ наведені на рис.~\ref{atu:f:ross_q}.
 
 
 \begin{figure}[ht!]
@@ -166,21 +146,21 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_q-p_q1.png}
 \end{center}
-  \caption{Рассматриваемые критерии для системы Рёсслера}
+\caption{Розглянуті критерії для системи Ресслера}
 \label{atu:f:ross_q}
 \end{figure}
 
-Как и следовало ожидать, большая часть критериев мало пригодна
-для применения в методах идентификации. Несмотря на явные
-общие тенденции в поведении графиков, наличие нерегулярных колебаний
-не позволяют рассчитывать на приемлемую точность.
-Лучшие свойства демонстрирует критерий $q_{z \max{}}$,
-график которого содержит сравнительно длинные прямые участки.
-Однако, применение этого критерия ограничено одним таким участком,
-границы которого зависят от других параметров системы.
+Як і слід було очікувати, велика частина критеріїв мало
+придатна для застосування в методах ідентифікації. Незважаючи
+на явні загальні тенденції в поведінці графіків, наявність
+нерегулярних коливань не дозволяють розраховувати на прийнятну
+точність. Кращі властивості демонструє критерій
+$ q_{z \max{}} $, графік якого містить порівняно довгі прямі
+ділянки. Однак, застосування цього критерію обмежено однією такою
+ділянкою, межі якої залежать від інших параметрів системи.
 
-Для примера рассмотрим зависимости критерия $q_{x^2}$
-от значений двух параметров~(рис.~\ref{atu:f:ross_q_x2_ac_bc}).
+Для прикладу розглянемо залежності критерію
+$q_{x^2} $ від значень двох параметрів~(рис.~\ref{atu:f:ross_q_x2_ac_bc}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -188,23 +168,25 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_pwr-x_b_c.png}
 \end{center}
-  \caption{Зависимости $q_{x^2}(a,c)$ и  $q_{x^2}(b,c) $ для системы Рёсслера}
+\caption{Залежності $ q_{x ^ 2} (a, c) $ і $ q_{x ^ 2} (b, c) $ для системи Ресслера}
 \label{atu:f:ross_q_x2_ac_bc}
 \end{figure}
 
-Сложная и изрезанная структура полученных поверхностей
-свидетельствует не только о практически невозможной идентификации одновременно двух параметров,
-но и о том, что достаточно малые ошибки о определении одного из них
-приводят к существенным ошибкам идентификации другого.
+Складна і порізана структура отриманих поверхонь свідчить не
+тільки про практично неможливу ідентифікацію одночасно двох
+параметрів, а й про те, що досить малі похибки про визначенні
+одного з них призводять до суттєвих помилок ідентифікації
+іншого.
 
-Зависимости $q_{z \max{}}(a,c)$ и  $q_{z \max{}}(b,c) $
-(рис.~\ref{atu:f:ross_q_zmax_ac_bc}) построенные для
-области параметров, для которой не наблюдается существенное изменение
-поведения критерия, показывает лучшие результаты. Однако,
-даже в этой области происходят резкие ``провалы'' графика.
-Такое поведение может и не привести в существенным ошибкам идентификации.
-Тем не менее, при попадании одной из моделей в область ``провала''
-процесс идентификации может быть нарушен.
+Залежності
+$ q_{z \max{}} (a, c) $ і $ q_{z \max{}} (b, c) $ (рис.~\ref{atu:f:ross_q_zmax_ac_bc})
+побудовані для області
+параметрів, для якої не спостерігається суттєва зміна поведінки
+критерію, показує кращі результати. Однак, навіть в цій області
+відбуваються різкі ``провали'' графіка. Така поведінка може і не
+привести в суттєвих помилок ідентифікації. Проте, при попаданні
+однієї з моделей в область ``провалу'' процес ідентифікації
+може бути порушений.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -212,18 +194,20 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_zmax_b_c.png}
 \end{center}
-  \caption{Зависимости $q_{z \max{}}(a,c)$ и  $q_{z \max{}}(b,c) $ для системы Рёсслера}
+\caption{Залежності $ q_{z \max{}} (a, c) $ і $ q_{z \max{}} (b, c) $ для системи Ресслера}
 \label{atu:f:ross_q_zmax_ac_bc}
 \end{figure}
 
-Попробуем вывести более пригодный для задачи идентификации критерий,
-исходя из вида системы~(\ref{atu:eq:rossler}).
-Непосредственно параметр $c$ входит только в последнее уравнение системы.
-Так как рассматриваются только режимы, проявляющие устойчивою по Пуассону динамику,
-то при усреднении на большом интервале времени левая часть стремится к нулю.
-В правой части есть два параметра: $c$ и $b$.
-Даже для условий усреднения нет возможности определить оба,
-но для идентификации $c$ введём следующий вид критерия:
+Спробуємо вивести більш придатний для задачі ідентифікації
+критерій, виходячи з виду системи~(\ref{atu:eq:rossler}). Безпосередньо
+параметр
+$c$ входить тільки в останнє рівняння системи. Так як
+розглядаються тільки режими, що проявляють стійку по Пуассону
+динаміку, то при усередненні на великому інтервалі часу ліва
+частина прагне до нуля. У правій частині є два параметри: $c$ і
+$b$. Навіть для умов усереднення немає можливості визначити
+обидва, але для ідентифікації тільки
+$c$ введемо такий критерій:
 %
 \begin{equation}
   q_{xzOz} =
@@ -231,33 +215,43 @@
   \label{atu:eq:ross_qzxOz}
 \end{equation}
 
-При фиксированных параметрах $a$ и $b$ график $q_{xzOz}(c)$
-представляет собой близкую к линейной
-зависимость~(рис.~\ref{atu:f:ross_q}, правый график, пунктирная кривая).
-Однако, применение этого критерия приводит к определённым трудностям.
-Прежде всего, наличие дробной зависимости требует отдельного анализа
-знаменателя. Из анализа аттрактора системы известно, что $z>0 \; \forall \; t > 0$,
-то есть знаменатель в ноль не обращается. При этом вид
-зависимости $z(t)$ характеризуется резкими всплеками,
-между которыми находятся области, в которых $z \approx 0 $,
-что может привести к значительным всплескам в значении критерия.
-Однако, эта же величина $z$ входит и в числитель как множитель,
-и если метод и параметры устреднения в числителе и знаменателе
-одинаковые, то возмущения критерия будут ограниченными.
+При фіксованих параметрах
+$ a $ і
+$ b $ графік
+$q_{xzOz}(c)$ має близьку до лінійної залежність~(рис.~\ref{atu:f:ross_q}, правий графік, пунктирна крива).
+Однак, застосування цього
+критерію призводить до певних труднощів. Перш за все, наявність
+дробової залежності вимагає окремого аналізу знаменника. З
+аналізу аттрактора системи відомо, що
+$ z> 0 \; \forall \; t> 0 $, тобто знаменник гарантовано не є нуль. При цьому
+вид залежності
+$z(t)$ характеризується різкими сплесками, між якими знаходяться
+області, в яких
+$ z \approx 0 $, що може привести до значних сплесків в значенні
+критерію. Однак, ця ж величина
+$z$ входить і в чисельник як множник, і якщо метод і параметри
+усереднення в чисельнику і знаменнику однакові, то збурення
+критерію будуть обмеженими.
 
 
 % }}}2
 
-\subsection{Тестовая задача идентификации для системы Рёсслера}  % {{{2
+\subsection{Тестова задача ідентифікації для системи Ресслера} % {{{2
 
-Для синтеза системы идентификации был выбрана группа методов ``ql3rlWvnAAW'',
-критерий $q_{xzOz}$.
-Используемые значения параметров: $a=0.25$, $b=1$, $ c \in [3, 40 ]$.
-Прежде всего, рассмотрим процесс идентификации
-в квазистационарном случае,
-при медленном изменении параметра~(\ref{atu:eq:po_t_ramp}), $p_0=10$, $U_p=20$.
-Динамика агентов и различных определений $p_\mathrm{id}$
-представлена на рис.~\ref{atu:f:ross_id_ramp}.
+Для синтезу системи ідентифікації була обрана група методів
+``ql3rlWvnAAW'', критерій
+$ q_{xzOz} $.
+Використовувані значення параметрів:
+$ a = 0.25 $,
+$ b = 1 $,
+$ c \in [3, 40] $.
+
+Перш за все, розглянемо процес ідентифікації
+в квазістаціонарному випадки, при повільної зміні
+параметра~(\ref{atu:eq:po_t_ramp}),
+$ p_0 = 10 $,
+$ U_p = 20 $. Динаміка агентів і різних визначень
+$ p_\mathrm{id} $ представлена на рис.~\ref{atu:f:ross_id_ramp}.
 
 
 \begin{figure}[ht!]
@@ -266,25 +260,27 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_p_ql3rlWvnAAW_ramp.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы Рёсслера при условии (\ref{atu:eq:po_t_ramp})}
+\caption{Динаміка агентів і ідентифікованого значення для системи Ресслера за умови (\ref{atu:eq:po_t_ramp})}
 \label{atu:f:ross_id_ramp}
 \end{figure}
 
-Графики динамики агентов показывают, что наблюдается корректное
-``сопровождение'' агентами идентифицируемого параметра, за исключением
-небольшого начального участка, на котором усреднение критерия
-на даёт корректных результатов. Все зависимости $p_\mathrm{id}(4)$
-имеют практически неотличимую динамику, хорошее приближение идентифицируемого параметра.
-При этом наблюдаются незначительные, но резкие ``всплески'',
-вызванные аналогичным явлением для критерия.
-Хорошим признаком является тот, что не наблюдается областей,
-в которых процесс идентификации нарушается или заметно теряет точность.
+Графіки динаміки агентів показують, що спостерігається коректний
+``супровід'' агентами ідентифікованого параметра, за винятком
+невеликої початкової ділянки, на якої усереднення критерію
+на дає коректних результатів. Все залежності
+$ p_\mathrm{id} $ мають практично однакову динаміку,
+що приводить до гарного наближення ідентифікованого параметра. При цьому
+спостерігаються незначні, але різкі ``сплески'', викликані
+аналогічним явищем для критерію. Доброю ознакою є те, що
+немає помітних областей, в яких процес ідентифікації
+порушується або помітно втрачає точність.
 
-Рассмотрим динамку процесса идентификации
-(рис.~\ref{atu:f:ross_id_sign})
-в том случае,
-если идентифицируемый параметр претерпевает
-резкие скачки~(\ref{atu:eq:po_t_sign}), $p_0=21$, $U_p=7$, $\omega_{in}=0.01047$.
+Розглянемо динамку процесу ідентифікації (рис.~\ref{atu:f:ross_id_sign})
+в тому випадку, коли ідентифікований параметр зазнає різкі
+скачки~(\ref{atu:eq:po_t_sign}),
+$ p_0 = 21 $,
+$ U_p = 7 $,
+$ \omega_{in} = 0.01047 $.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -292,17 +288,17 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_p_ql3rlWvnAAW_sign.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы Рёсслера при условии (\ref{atu:eq:po_t_sign})}
+\caption{Динаміка агентів і ідентифікованого значення для системи Ресслера за умови (\ref{atu:eq:po_t_sign})}
 \label{atu:f:ross_id_sign}
 \end{figure}
 
-Помимо общей работоспособности метода идентификации следует отметить,
-что в данном случае все рассматриваемые способы определения $p_\mathrm{id}$
-дают практически неразличимые результаты.
+Крім загальної працездатності методу ідентифікації слід
+зазначити, що в даному випадку всі розглянуті способи визначення
+$ p_\mathrm{id} $ дають результати, які практично неможливо розрізнити.
 
-На рис.~\ref{atu:f:ross_id_sin}
-представлены аналогичные результаты,
-но в случае более плавного изменения параметра~(\ref{atu:eq:po_t_sin}), при прочих равных.
+На рис.~\ref{atu:f:ross_id_sin} представлені аналогічні результати, але
+в разі більш плавної зміни параметра~(\ref{atu:eq:po_t_sin}), при інших
+рівних.
 
 
 \begin{figure}[ht!]
@@ -311,22 +307,23 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_p_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы Рёсслера при условии (\ref{atu:eq:po_t_sin})}
+\caption{Динаміка агентів і ідентифікованого значення для системи Ресслера за умови (\ref{atu:eq:po_t_sin})}
 \label{atu:f:ross_id_sin}
 \end{figure}
 
-Принципиальных отличий не выявлено, средняя ошибка идентификации в этом
-случае ниже, что достаточно очевидно.
+Принципових відмінностей не виявлено, середня похибка
+ідентифікації в цьому випадку нижче, що досить очевидно.
 
 
 % }}}2
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Рёсслера}  % {{{2
+\subsection{Вплив параметрів системи ідентифікації на похибку ідентифікації для системи Ресслера} % {{{2
 
-Рассмотрим влияние параметров системы идентификации.
-Для рассматриваемой системы выбор правильного значения $a_q$
-особенно важен, ввиду наличия резких импульсов в значении критерия.
-Характерных вид такой зависимости представлен на рис.~\ref{atu:f:ross_q_t}.
+Розглянемо вплив параметрів системи ідентифікації. Для даної
+системи вибір правильного значення
+$a_q$ особливо важливий, зважаючи на наявність різких імпульсів
+в значенні критерію. Характерний вид такої залежності
+представлено на рис.~\ref{atu:f:ross_q_t}.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -334,20 +331,22 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_q_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Характерных вид зависимостей $q_{xzOz}(t)$ для системы Рёсслера}
+\caption{Характерний вид залежностей $ q_{xzOz} (t) $ для системи Ресслера}
 \label{atu:f:ross_q_t}
 \end{figure}
 
-Несмотря на наличие таких импульсов,
-общий вид зависимости ошибки идентификации
-остаётся неизменным~(рис.~\ref{atu:f:ross_e_a_q}).
-Так как большинство методов определения $p_\mathrm{id}$
-дают близкие результаты, на на этом и последующих графиках
-ограничимся пятью. Рост ошибки идентификации при $a_q \to 0$
-обусловлен тем, что избыточные фильтрующие свойства критерия
-не позволяют не только отреагировать, но и заметить изменение динамики системы.
-Рост в правой части графика, как и в предыдущих тестовых задачах,
-обусловлен недостаточным временем усреднения критерия.
+Незважаючи на наявність таких імпульсів, загальний
+вид залежності похибки ідентифікації залишається
+незмінним~(рис.~\ref{atu:f:ross_e_a_q}).
+Так як більшість методів визначення
+$ p_\mathrm{id} $ дають близькі результати, на на цьому і наступних
+графіках обмежимося п'ятьма. Зростання похибки ідентифікації
+при
+$ a_q \to 0 $ обумовлено тим, що надлишкові фільтруючі властивості
+критерію не дозволяють не тільки відреагувати, але й помітити
+зміну динаміки системи. Зростання в правій частині графіка,
+як і в попередніх тестових завданнях, обумовлені недостатнім
+часом усереднення критерію.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -355,18 +354,19 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_a_q_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(a_q)$ для системы Рёсслера}
+\caption{Залежності $ \overline{e} (a_q) $ для системи Ресслера}
 \label{atu:f:ross_e_a_q}
 \end{figure}
 
-Следующий параметр, влияющий на свойства системы идентификации --- $q_\gamma$.
-Для семейства методов ``ql3rlWvnAAW'' он применяется дважды.
-Первый раз, в составе значения $W$, он определяет
-динамику одного агента. Второй раз --- задаёт уровень влияния агента
-на уровне координатора. В отличие от методов ``Fq\ldots''
-этот параметр не участвует при определении агентом величины $p_e$.
-Полученные зависимости $\bar{e}(q_\gamma)$
-представлены на рис.~\ref{atu:f:ross_e_q_gamma}.
+Наступний параметр, що впливає на властивості системи
+ідентифікації ---
+$ q_\gamma $. Для сімейства методів ``ql3rlWvnAAW'' він застосовується
+двічі. Перший раз, в складі значення
+$W$, він визначає динаміку одного агента. Другий раз --- задає
+рівень впливу агента на рівні координатора. На відміну від
+методів ``Fq\ldots'' цей параметр не використовується при визначенні агентом
+величини $p_e$. Отримані залежності
+$ \overline{e}(q_\gamma) $ представлені на рис.~\ref{atu:f:ross_e_q_gamma}.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -374,34 +374,34 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_q_gamma_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(q_\gamma)$ для системы Рёсслера}
+\caption{Залежності $ \overline{e} (q_\gamma) $ для системи Ресслера}
 \label{atu:f:ross_e_q_gamma}
 \end{figure}
 
-Оба графика демонстрируют увеличение ошибки идентификации при избыточной чувствительности,
-т.е. при $q_\gamma \to 0 $.
-Однако в дальнейшем поведение графиков различаются. Если
-параметр изменяется резко, что ошибки идентификации, связанные с
-недостаточной чувствительностью, становятся малыми, по сравнению с ошибками,
-обусловленными
-ограниченной скоростью изменения критерия, и зависимость от $q_\gamma$
-практически отсутствует. При менее ярко выраженной динамке изменения параметра,
-появляется как увеличение ошибки из-за недостаточной чувствительности,
-так и различие между применяемыми поисковыми координаторами методов.
-В первую очередь растёт ошибка идентификации у методов, использующих $p_c$,
-во вторую --- у методов, использующих ``глобальные'' оценки.
-Но в целом, если исключить область избыточной чувствительности,
-влияние этого параметра незначительно, что обусловлено
-адаптационными свойствами метода.
-Метод ql3rlWvnleW менее других теряет точность при росте чувствительности.
+Обидва графіка демонструють збільшення похибки ідентифікації
+при надмірній чутливості, тобто при
+$ q_\gamma \to 0 $. Однак в подальшому поведінку графіків
+розрізняються. Якщо параметр змінюється різко, що похибки
+ідентифікації, пов'язані з недостатньою чутливістю, стають
+малими, в порівнянні з похибками, зумовленими обмеженою
+швидкістю зміни критерію, і залежність від
+$ q_\gamma $ практично відсутня. При менш яскраво вираженої динамки
+зміни параметра, з'являється як збільшення похибки через
+недостатню чутливість, так і відмінність між застосовуваними
+пошуковими координаторами методів. В першу чергу зростає
+похибка ідентифікації у методів, які використовують
+$p_c$, в другу --- у методів, які використовують ``глобальні'' оцінки.
+Але в цілому, якщо виключити область надмірної
+чутливості, вплив цього параметра незначний, що зумовлено
+адаптаційними властивостями методу. Метод ql3rlWvnleW менш за інших
+схильний втрачати точність при зростанні чутливості.
 
-Влияние параметра $v_f$ для методов, использующих ансамбль агентов,
-прежде всего обуславливает динамику точной настройки параметра,
-а не скорость реакции на резкие изменения параметра.
-Поэтому правый график соответствующих зависимостей
-(рис.~\ref{atu:f:ross_e_v_f}), показывает
-более значительное влияние этого параметра.
-
+Вплив параметра
+$ v_f $ для методів, які використовують ансамбль агентів, перш за
+все зумовлює динаміку точної настройки параметра, а не швидкість
+реакції на різкі зміни параметра. Тому правий графік відповідних
+залежностей (рис.~\ref{atu:f:ross_e_v_f}), показує більш значний вплив
+цього параметра.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -409,21 +409,23 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_v_f_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(v_f)$ для системы Рёсслера}
+\caption{Залежності $ \overline{e} (v_f) $ для системи Ресслера}
 \label{atu:f:ross_e_v_f}
 \end{figure}
 
+Лівий графік свідчить про те, що при стрибкоподібному зміні
+параметра виправданою стає велика швидкість переміщення
+агентів, незважаючи на зменшення точності через надмірне
+пересування агентів. Слід зазначити, що в даному прикладі
+переміщення агентів обмежені. Без цього обмеження при зростанні
+$ v_f $ спостерігається порушення стійкості пошуку.
 
-Левый график свидетельствует о том, что при скачкообразном изменении параметра
-оправданной становится большая скорость перемещения агентов,
-несмотря на уменьшение точности из-за избыточного рысканья агентов.
-Следует отметить, что в данном примере перемещение агентов ограничено.
-Без этого ограничения при росте $v_f$ наблюдается нарушение устойчивости поиска.
-
-Влияние коэффициента $k_e$ (рис.~\ref{atu:f:ross_e_k_e})
-в какой-то мере схоже с влиянием коэффициента $v_f$.
-Отличие заключается в том, что $k_e$ влияет не только на скорость перемещения агентов,
-но на их равновесную конфигурацию.
+Вплив коефіцієнта
+$ k_e $ (рис.~\ref{atu:f:ross_e_k_e}) в якійсь мірі має спільні риси
+з впливом коефіцієнта
+$ v_f $. Відмінність полягає в тому, що
+$ k_e $ впливає не тільки на швидкість переміщення агентів, але
+на їх рівноважну конфігурацію.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -431,17 +433,18 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_e_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_e)$ для системы Рёсслера}
+\caption{Залежності $ \overline{e} (k_e) $ для системи Ресслера}
 \label{atu:f:ross_e_k_e}
 \end{figure}
 
-Как и для предыдущего параметра, влияние этого коэффициента
-более значительно при плавном изменении параметра.
-И опять же, без искусственного ограничения подвижности агентов
-высокие величины $k_e$ приводят к потере устойчивости поиска.
+Як і для попереднього параметра, вплив цього коефіцієнта проявляється
+значніше при плавній зміні параметра. І знову ж таки, без
+штучного обмеження рухливості агентів високі величини
+$k_e$ призводять до втрати стійкості пошуку.
 
-Влияние параметра $k_{nl}$ (рис.~\ref{atu:f:ross_e_k_nl})
-отображает свойства множества агентов как ансамбля.
+Вплив параметра
+$k_{nl}$ (рис.~\ref{atu:f:ross_e_k_nl})
+відображає властивості множини агентів як ансамблю.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -449,19 +452,20 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_nl_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_{nl})$ для системы Рёсслера}
+\caption{Залежності $ \overline{e} (k_{nl}) $ для системи Ресслера}
 \label{atu:f:ross_e_k_nl}
 \end{figure}
 
-Малые значения величины $k_{nl}$ приводят к тому, что движение
-агентов становится практически независимым, при этом конфигурация
-агентов вблизи искомого значения далека от оптимальной.
-И наоборот, увеличение $k_{nl}$ превращает ансамбль в сетку,
-с неизбежным ростом ошибки идентификации.
+Малі значення величини
+$ k_{nl} $ призводять до того, що рух агентів стає практично
+незалежним, при цьому конфігурація агентів поблизу шуканого
+значення далека від оптимальної. І навпаки, збільшення
+$ k_{nl} $ перетворює ансамбль в сітку, з неминучим зростанням
+похибки ідентифікації.
 
-Наличие искусственных ограничений на перемещения агентов
-приводит к тому, что влияние коэффициента $k_{cl}$
-становится минимальным (рис.~\ref{atu:f:ross_e_k_cl}).
+Наявність штучних обмежень на переміщення агентів призводить
+до того, що вплив коефіцієнта
+$ k_{cl} $ стає мінімальним (рис.~\ref{atu:f:ross_e_k_cl}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -469,15 +473,16 @@
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_cl_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_{cl})$ для системы Рёсслера}
+\caption{Залежності $ \overline{e} (k_{cl}) $ для системи Ресслера}
 \label{atu:f:ross_e_k_cl}
 \end{figure}
 
-Более того, при плавном изменении параметра его введение только ухудшает
-качество идентификации, создавая дополнительную неравномерность в распределении
-агентов. При скачкообразном изменении идентифицируемого параметра
-несущественное улучшение связано с увеличением расстояния между агентами,
-и более быстрой реакцией на скачок.
+Більш того, при плавній зміні параметра його введення
+лише погіршує якість ідентифікації, створюючи додаткову
+нерівномірність в розподілі агентів. При стрибкоподібному зміні
+ідентифікованого параметра несуттєве покращення пов'язано зі
+збільшенням відстані між агентами, і більш швидкою реакцією
+на стрибок параметра.
 
 
 % }}}2
@@ -485,31 +490,30 @@
 
 
 
-\subsection{Выводы}  % {{{2
+\subsection{Висновки} % {{{2
 
-Результаты моделирования
-процессов идентификации параметра ``$c$''
-системы Рёсслера,
-позволяют в сделать следующие выводы:
+Результати моделювання процесів ідентифікації параметра ``$c$''
+системи Ресслера, дозволяють в зробити наступні висновки:
 
 \begin{itemize}
 
   \item
-    Стандартный набор критериев имеет для этой системы
-    весьма ограниченное применение.
+    Стандартний набір критеріїв має для цієї системи досить
+    обмежене застосування.
 
   \item
-    Использование критерия $q_{xzOz}$
-    позволяет построить работоспособную систему идентификации.
+    Використання критерію
+    $ q_{xzOz} $ дозволяє побудувати працездатну систему ідентифікації.
 
   \item
-    Группа методов ql3rlWvnAAW показала свою хорошую работоспособность,
-    а скорость идентификации при этом в первую очередь определяется
-    динамикой критерия.
+    Група методів ql3rlWvnAAW показала свою хорошу працездатність, а
+    швидкість ідентифікації при цьому в першу чергу визначається
+    динамікою критерію.
 
   \item
-    Параметры самой системы идентификации могут изменяться в достаточно широких
-    пределах без существенного увеличения ошибки идентификации.
+    Параметри самої системи ідентифікації можуть змінюватися
+    в досить широких межах без істотного збільшення похибки
+    ідентифікації.
 
 \end{itemize}
 
